--- a/reporadar/package.json
+++ b/reporadar/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
+    "motion": "^12.23.24",
     "next": "14.2.33",
     "next-auth": "^4.24.11",
     "prisma": "^6.18.0",
