--- a/reporadar/.env.example
+++ b/reporadar/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/reporadar"
+DATABASE_URL="postgresql://user:password@localhost:5432/duedeck"
 
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
@@ -23,7 +23,7 @@ CODERABBIT_API_URL=""
 
 ELASTIC_CLOUD_ID=""
 ELASTIC_API_KEY=""
-ELASTIC_INDEX_NAME="reporadar"
+ELASTIC_INDEX_NAME="duedeck"
 
 MCP_API_KEY=""
 MCP_ENDPOINT=""
