--- a/reporadar/package.json
+++ b/reporadar/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@octokit/rest": "^20.0.2",
     "@prisma/client": "^6.18.0",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
