claude orchestra agent

--- a/reporadar/.env.example
+++ b/reporadar/.env.example
@@ -43,3 +43,8 @@ POSTMAN_WEBHOOK_SECRET=""
 # Redis (Rate Limiting)
 UPSTASH_REDIS_URL=""
 UPSTASH_REDIS_TOKEN=""
+
+# MCP Server URLs for Central Agent Coordinator
+GITHUB_MCP_URL="http://localhost:3001"
+MARKET_MCP_URL="http://localhost:3002"
+FOUNDER_MCP_URL="http://localhost:3003"
